[package]
name = "timelock"
version = "0.1.0"
authors = ["Kevin Johnson <kevin@coolkev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2.1"
rand = "0.7.2"
digest = "0.8.1"
rust-crypto = "0.2.36"
byteorder = "1"
console = "0.11.2"
log-update = "0.1.0"
ctrlc = "3.1.4"
rand_core = "0.5.1"
clap = {version = "~2.27.0", features = ["yaml"]}
hex = "0.4.2"