[package]
name = "timelock"
version = "0.1.0"
authors = ["Kevin Johnson <kevin@coolkev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2.1"
rand = "0.7.2"
rust-crypto = "0.2.36"
ctrlc = "3.1.4"
rand_core = "0.5.1"
clap = {version = "~2.27.0", features = ["yaml"]}
hex = "0.4.2"
linreg = "0.2.0"
timeago = "0.2.1"
aes-stream = "0.2.1"
cached = "0.13.1"